fix overflow of other popovers and add EAGER LOADING to make it blazingly fast

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -56,6 +56,7 @@ time {
 }
 
 .popover-content {
-  overflow-y: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   max-height: 500px;
 }
